--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav><!-- End Nav Menu -->
 
-      <a class="btn-getstarted" href="index.html#about">LOGIN</a>
+      <a class="btn-getstarted" href="http://59.97.238.16:9292/Login">LOGIN</a>
 
     </div>
   </header><!-- End Header -->
