--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav><!-- End Nav Menu -->
 
+
+	  <button class="btn-getstarted" onclick="downloadApk()">Download VESmart</button>
       <a class="btn-getstarted" href="http://59.97.238.16:9292/Login">LOGIN</a>
 
     </div>
@@ -1024,4 +1026,5 @@
 </body>
 
 </html>
+
 
