--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </nav><!-- End Nav Menu -->
 
 
-	  <button class="btn-getstarted" onclick="downloadApk()">Download VESmart</button>
+	  <a class="btn-getstarted" >Download VESmart</a>
       <a class="btn-getstarted" href="http://59.97.238.16:9292/Login">LOGIN</a>
 
     </div>
@@ -1026,5 +1026,6 @@
 </body>
 
 </html>
+
 
 
