Update index.html added App download code

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav><!-- End Nav Menu -->
 
-
-	  <a class="btn-getstarted" >Download VESmart</a>
-      <a class="btn-getstarted" href="http://59.97.238.16:9292/Login">LOGIN</a>
-
+	   <div class="button-row">
+		  <a class="btn-getstarted" href="https://drive.google.com/file/d/1jxvYunezPV4cFCpJJDCt4GsKTrf9rvz8/view?usp=sharing" target="_blank">Download VESmart</a>
+		  <a class="btn-getstarted" href="http://59.97.238.16:9292/Login">LOGIN</a>
+	  </div>
     </div>
   </header><!-- End Header -->
 
@@ -1022,10 +1022,17 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+<style>
+    .button-row {
+      display: flex;
+      gap: 10px;            /* space between buttons */
+      align-items: center;
+    }
+</style>
 </body>
 
 </html>
+
 
 
 
