Update index.html changed postion of downlaod button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li><a href="index.html#services">Services</a></li>
           <li><a href="index.html#portfolio">Portfolio</a></li>
           <!-- <li><a href="index.html#team">Team</a></li> -->
-          <!-- <li><a href="blog.html">Blog</a></li> -->
+          <li><a href="index.html#apps">Applications</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
 
@@ -70,7 +70,7 @@
 
 	   <div class="button-row">
 		  <a class="btn-getstarted" href="https://drive.google.com/file/d/1jxvYunezPV4cFCpJJDCt4GsKTrf9rvz8/view?usp=sharing" target="_blank">Download VESmart</a>
-		  <a class="btn-getstarted" href="http://59.97.238.16:9292/Login">LOGIN</a>
+		  <a class="btn-getstarted" href="http://59.97.238.16:9292/Login" target="_blank">LOGIN</a>
 	  </div>
     </div>
   </header><!-- End Header -->
@@ -829,6 +829,23 @@
 
     </section><!-- End Recent-posts Section -->
 
+	<section id="apps" class="call-to-action">
+      <img src="assets/img/cta-bg.jpg" alt="">
+      <div class="container">
+        <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-xl-10">
+            <div class="text-center">
+              <h3>"Download VESmart Applications"</h3>
+			  <div class="button-row">
+				  <a class="btn-getstarted" href="https://drive.google.com/file/d/1uxEkbQnZ-6Yxm8x948t5pBopnJ2WgaYi/view?usp=sharing" target="_blank">VESmart [Android]</a>
+				  <a class="btn-getstarted" href="index.html#apps">VESmart [IOS]</a>
+				</div>
+              <!-- <a class="cta-btn" href="#">Call To Action</a> -->
+            </div>
+          </div>
+        </div>
+      </div>
+
     <!-- Contact Section - Home Page -->
     <section id="contact" class="contact">
 
@@ -1023,15 +1040,33 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 <style>
-    .button-row {
-      display: flex;
-      gap: 10px;            /* space between buttons */
-      align-items: center;
-    }
+.button-row {
+  display: flex;           /* Align buttons in a row */
+  gap: 15px;               /* Space between buttons */
+  justify-content: center; /* Center the buttons horizontally */
+  margin-top: 20px;        /* Optional: space from elements above */
+}
+
+.btn-getstarted {
+  display: inline-block;
+  padding: 10px 25px;
+ color: var(--contrast-color);
+    background: var(--accent-color);
+    font-size: 14px;
+    padding: 8px 26px;
+    margin: 0;
+    /* border-radius: 4px; */
+    transition: 0.3s;
+}
+
+.btn-getstarted:hover {
+ color: White; /* Darker on hover */
+}
 </style>
 </body>
 
 </html>
+
 
 
 
