--- a/index.html
+++ b/index.html
@@ -843,7 +843,8 @@
           </div>
         </div>
       </div>
-
+ </section><!-- End Call-to-action Section -->
+	  
     <!-- Contact Section - Home Page -->
     <section id="contact" class="contact">
 
@@ -1064,6 +1065,7 @@
 </body>
 
 </html>
+
 
 
 
